--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "New York, New York"
 title                    : "Aaron Dharna"
 title_separator          : "-"
 name                     : &name "Aaron Dharna"
-description              : &description "Master's Student and Machine Learning Engineer"
+description              : &description "Ph.D. Student and Machine Learning Engineer"
 url                      : https://aadharna.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "aadharna.github.io"
